# MusicMuseService

./: .env.dist  .gitignore  Dockerfile  Makefile  README.md  manage.py  mkdocs.yml  models.py  postman.json  pyproject.toml  requirements.txt  swagger.yml  views.py
.github/workflows/: workflow.yml
apps/music/: admin.py  documents.py  models.py  views.py
apps/music/api/: docs.py  types.py  validators.py
apps/music/api/dto/: _base.py  artists.py  content.py  genres.py  labels.py  releases.py  tracks.py
apps/music/api/routes/: albums.py  artists.py  content.py  genres.py  labels.py  releases.py  tracks.py
apps/music/api/schemas/: artists.py  genres.py
apps/music/migrations/: 0002_remove_artists_avatar_url_remove_tracks_duration_and_more_squashed_0004_alter_video_duration.py  0005_alter_audio_audio_alter_images_image_and_more.py  0006_genres_parent.py  0007_genres_rus_name_genres_short_name_tracks_status_and_more.py  0008_artists_gender_artists_is_verified_and_more.py  0009_alter_artists_label.py  0010_alter_artists_bio_alter_artists_birth_date.py  0011_remove_artists_music_artists_gender_artistgender_and_more.py  0012_releases_remove_albums_artists_and_more.py  0013_alter_labels_cover_image.py  0014_alter_genres_cover_image.py  0015_releases_publication_time_and_more.py  0016_alter_releases_release_date.py  0017_tracks_video.py  0018_rename_album_tracks_release.py  0019_alter_audio_audio_alter_images_image_and_more.py  0020_tracks_age_related_content_tracks_publication_time_and_more.py  0021_alter_tracks_cover_image_alter_tracks_release.py  0022_alter_tracks_label.py
apps/music/services/: popular_extractor.py
artifacts/: test_models.docx
assets/css/: 1c461ae9-8aef-4046-9d5a-6bbb4447b0cc.css  1c556ff4-230b-4d0c-a696-a130ff1217a7.css  6e5c5fea-9199-4401-900a-3509c8a8d2f9.css  d-simple-styles.css  d1575d52-039a-494e-99cf-a298d1a912d7.css  e-complex-styles.css  f-blocks-styles.css
assets/js/: common.js
core/: api.py  asgi.py  settings.py  storage_backends.py  urls.py  wsgi.py
debug/: index.html  search.html  styles.css
docs/: index.md  ml.md
music/: admin.py  documents.py  models.py  storage_backends.py  urls.py
music/api/: serializers.py  views.py
music/migrations/: 0001_initial.py  0002_albums_description_genres_image_tracks_description_and_more.py  0002_genres_image_alter_albums_cover_image_and_more.py  0002_genres_image_generatedimagecontent_and_more.py  0002_remove_artists_avatar_url_remove_tracks_duration_and_more_squashed_0004_alter_video_duration.py  0003_alter_albums_cover_image_alter_artists_avatar_url_and_more.py  0005_alter_audio_audio_alter_images_image_and_more.py
music_muse/: asgi.py  settings.py  storage_backends.py  urls.py  views.py  wsgi.py
static/css/: 16a9a21a-d02e-47a1-a4e3-5ed432aaae2d.css  6484be17-4d26-49c5-ae97-7f43d84e6b02.css  812686c5-33c2-4a44-b593-0b30ba46175e.css  c-animation-styles.css  f5afb590-60d6-42c7-b776-c0755f2f9ebf.css  g-libraries-styles.css
static/index/css/: 8392003e-ee22-4050-b885-590cd869d892.css  a-common-styles.css  b-themes-styles.css  c3e094a3-ccf5-4046-8c3a-d815431d80e4.css
static/index/js/: menu.js
static/music/css/: artist_page.css  artists.css  cards.css  footer.css  header.css  mobile.css  player.css  release_page.css  sidebar.css  styles.css  track_detail.css  tracks.css
static/music/js/: header.js  player-artist.js  player-detail.js  player.js  sidebar.js
templates/: base.html  footer.html  header.html  index.html  music.html  music_artist.html  player.html  release_detail.html  sidebar.html  track_detail.html
templatetags/: track_filters.py
